<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (C) 2017 Katarina Sheremet

This file is part of Delern.

Delern is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
any later version.

Delern is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with  Delern.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/sign_out" />
    </group>

    <item android:title="@string/communicate_menu">
        <menu>
            <item
                android:id="@+id/nav_invite"
                android:icon="@drawable/ic_contact_mail_black_24dp"
                android:title="@string/invite_menu_label" />

            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_live_help_black_24dp"
                android:title="@string/nav_contact_us" />
        </menu>
    </item>

    <!-- I need to provide unique id for group to add a divider -->
    <group android:id="@+id/about_app">
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about_app" />
    </group>

</menu>
