...
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="communicate_menu">Communicate</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="install_email_app_user_message">Please install Email App</string>
    <string name="feedback_email_subject">Feedback</string>
    <string name="send_email_intent_chooser_message">Send Email</string>
    <string name="invite_friend_intent_chooser_message">Share</string>
    <string name="install_messenger_app_user_message">Please install Messenger app</string>

    <!-- User messages, including warnins dialogs and toasts -->
    <string name="delete_card_warning">Delete card?</string>
    <string name="added_card_user_message">Added</string>
    <string name="updated_card_user_message">Updated</string>
...
