<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (C) 2017 Katarina Sheremet

This file is part of Delern.

Delern is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
any later version.

Delern is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with  Delern.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/edit_deck_menu"
        android:orderInCategory="101"
        android:title="@string/edit_cards_deck_menu" />
    <item
        android:id="@+id/deck_settings"
        android:orderInCategory="102"
        android:title="@string/deck_settings_menu" />
    <item
        android:id="@+id/deck_share"
        android:orderInCategory="103"
        android:title="@string/deck_share_menu" />
</menu>
