...
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/deck_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
...
